fix globals.css fontface

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,7 +12,7 @@
 @font-face {
   font-family: 'DancingScript';
   src: url('/fonts/DancingScript-VariableFont_wght.ttf') format('truetype');
-  font-weight: 400 500 600 700;
+  font-weight: 100 900;
   font-style: normal;
 }
 
