--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,8 +11,8 @@
 
 @font-face {
   font-family: 'DancingScript';
-  src: url('/fonts/DancingScript-VariableFont_wght.ttf') format('truetype');
-  font-weight: 100 900;
+  src: url('/fonts/DancingScript-Regular.ttf') format('truetype');
+  font-weight: normal;
   font-style: normal;
 }
 
