--- a/src/styles/__single.scss
+++ b/src/styles/__single.scss
@@ -18,3 +18,522 @@
 .not-prose {
 	@apply text-base font-normal text-neutral-900 dark:text-neutral-100;
 }
+
+/*----- hタグ -----*/
+#single-entry-content h2 {
+  padding: 14px 0 16px 16px;
+  margin-top: 3em;
+  background: #fff7ed;
+  border-left: solid 8px #FDBA74;
+}
+
+#single-entry-content h3 {
+  padding: 6px 0 8px 12px;
+  border-left: solid 12px #FDBA74;
+}
+
+/*----- TOC+ -----*/
+#toc_container {
+  padding: 0.7em 1.6em 0.5em 1.6em;
+  margin: 3em 0.5em 4em 0.5em;
+  border: 1px solid var(--tw-prose-td-borders); }
+
+#toc_container .toc_title {
+  font-size: 1.1em;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 0;
+  padding-bottom: 0.4em;
+  border-bottom: 1px solid var(--tw-prose-td-borders); }
+
+#toc_container .toc_list {
+  list-style-type: decimal;
+  padding-left: 0.8em; }
+
+#toc_container .toc_list > li {
+  line-height: 1.5em;
+  font-size: 0.9em; }
+
+#toc_container .toc_list > li::marker {
+  font-weight: bold; }
+
+#toc_container .toc_list > li a {
+  text-decoration: none;
+  opacity: 0.7; }
+
+#toc_container .toc_list > li a:hover {
+  text-decoration: underline }
+
+#toc_container .toc_list > li ul {
+  padding-left: 1em; }
+
+#toc_container .toc_list > li > ul li {
+  list-style-type: disc;
+  font-size: 0.95em;
+  padding-left: 0; }
+
+/*----- 吹き出し -----*/
+.speech-sec-left, .speech-sec-right {
+  width: 100%;
+  margin: 2em 0;
+  overflow: hidden;
+  font-size: 90%;
+}
+
+.speech-sec-left .faceicon {
+  float: left;
+  margin-right: -90px;
+  width: 80px;
+}
+
+.speech-sec-right .faceicon {
+  float: right;
+  margin-left: -90px;
+  width: 80px;
+}
+
+.speech-sec-left .faceicon img, .speech-sec-right .faceicon img {
+  width: 100%;
+  height: auto;
+  margin: 0;
+  border-radius: 50%;
+}
+.speech-sec-left .faceicon img { border: solid 3px #a5f3fc; }
+.speech-sec-right .faceicon img { border: solid 3px #99f6e4; }
+
+.speech-outer {
+  width: 100%;
+}
+
+.speech-left {
+  float: left;
+  position: relative;
+  margin: 5px 0 0 105px;
+  padding: 0.6rem 1.2rem;
+	border: 2px solid #cffafe;
+  border-radius: 12px;
+  background: #ecfeff;
+}
+
+.speech-right {
+  float: right;
+  position: relative;
+  margin: 5px 105px 0 0;
+  padding: 0.6rem 1.2rem;
+	border: 2px solid #ccfbf1;
+  border-radius: 12px;
+  background: #f0fdfa;
+}
+
+.speech-left:after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 18px;
+  left: -24px;
+  border: 12px solid transparent;
+  border-right: 12px solid #cffafe;
+}
+
+.speech-right:after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 18px;
+  right: -24px;
+  border: 12px solid transparent;
+  border-left: 12px solid #ccfbf1;
+}
+
+.faceicon .icon-name {
+  color: #888888;
+  font-weight: 500;
+  font-size: 80%;
+  text-align: center;
+  position: relative;
+  top: -4px;
+}
+
+/*----- ブログカード -----*/
+.blogcard {
+  margin: 2em auto;
+  background: #fff;
+  border-radius: 4px;
+  max-width: 600px;
+  display: flex;
+  flex-direction: row;
+  border-radius: 10px;
+  position: relative;
+}
+
+.blogcard-link {
+  text-decoration: none;
+}
+
+.blogcard-avatar img {
+  width: 80%;
+  margin: 10%;
+}
+
+.blogcard-avatar {
+  width: 11%;
+  position: absolute;
+  border-radius: 50%;
+  border: 4px solid white;
+  background-image: linear-gradient(-60deg, #60A5FA 0%, #67E8F9 100%);
+  top: 3%;
+  left: calc(33% - 11%/2);
+  padding: 5px;
+  transition:.5s;
+}
+
+.blogcard-inner {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  border: 1px solid #e5e7eb;
+  border-radius: 10px;
+}
+
+.blogcard-img {
+  width: 100%;
+  height: 100%;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  background-position: bottom center;
+  background-size: cover;
+}
+
+.blogcard-text {
+  padding: 1em 1.1em 0.6em 1.1em;
+}
+
+.blogcard-url {
+  padding: 0 1rem 0.5rem 1rem;
+  text-align: right;
+  color: #60A5FA;
+  font-size: 12px;
+}
+
+.blogcard h4 {
+  margin: 0;
+  padding: 0 1rem;
+  font-size: 17px;
+}
+
+.blogcard-desc {
+  padding: 0.4rem 1rem;
+  font-size: 11px;
+  color: #999999;
+}
+
+.blogcard-actions {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  padding: 0.4rem 1rem;
+}
+
+.blogcard-button {
+  padding: 3px;
+  border-radius: 4px;
+  background: #2DD4BF;
+  font-size: 12px;
+  font-weight: bold;
+  text-align: center;
+  color: #ffffff;
+  border: 1px solid #2DD4BF;
+  cursor: pointer;
+  transition:.5s;
+}
+.blogcard:hover .blogcard-button {
+  background: #ffffff;
+  color: #2DD4BF;
+}
+
+.blogcard:hover .blogcard-avatar {
+  transform: rotate(23deg);
+}
+
+@media (max-width: 768px) {
+  .blogcard-desc {
+    display: none;
+  }
+
+  .blogcard-text {
+    padding: 0.8em 0 0.6em 0.4em;
+  }
+}
+
+/*----- テーブル　表 -----*/
+table {
+  display: block;
+  overflow-x: auto;
+  width: 100%;
+  max-width: 100%;
+  border-collapse: collapse;
+  -webkit-overflow-scrolling: touch; /* モバイルデバイスでのスムーズスクロール */
+}
+
+td, th {
+  white-space: nowrap; /* テキストが改行されないようにする */
+}
+
+/* 色指定 */
+:root {
+  --t-text:#444444;/*文字の色*/
+  --t-line:#a5f3fc;/*線の色*/
+  --t-bg1:#a5f3fc;/*タイトル行の背景色*/
+  --t-bg2:#ecfeff;/*ストライプの背景色*/
+}
+
+.table01 table {
+  color: var(--t-text);
+  text-align: center;
+  background-color: white;
+}
+
+.table01 th, .table01 td {
+  padding:0.5em;
+  font-size: 90%;
+}
+
+.table01 table th {
+  border: 1px dotted white;
+  text-align:center;
+  vertical-align: middle;
+  color: var(--t-text);
+  border: 2px solid var(--t-line);
+}
+
+.table01 thead {
+  border-bottom: 1px solid var(--t-line);
+}
+
+.table01 th {
+  padding: 0.5em 1em;
+}
+
+.table01 table td {
+  border: 1px dotted var(--t-line);
+  text-align:center;
+}
+
+.table01 tbody {
+  border:2px solid var(--t-line);
+}
+
+.table01 thead { color:white; }
+.table01 th { background-color:var(--t-bg1); }
+.table01 tr:nth-child(even) { background-color:var(--t-bg2); }
+
+.vertical-table table { writing-mode: vertical-lr; }
+.vertical-table table th, .vertical-table table td { writing-mode:horizontal-tb }
+
+/*----- ボックス -----*/
+.box {
+  margin: 1.5em 0.5em;
+  padding: 1.2rem 1.5rem;
+  border: 1px solid #e5e7eb;
+  border-radius: 10px;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  font-size: 90%;
+}
+
+.box p {
+  padding: 0;
+  margin: 0.5em 0;
+}
+
+.box ul, .box ol {
+  padding-top: 0; padding-bottom: 0; padding-left: 1.2em;
+  margin-top: 0; margin-bottom: 0;
+}
+
+.box ul li, .box ol li {
+  white-space: normal;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+}
+
+/*----- 本文内の画像 -----*/
+#single-entry-content figure img {
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgb(0 0 0 / 15%);
+}
+
+/*----- 監修者のコメント -----*/
+.comment-supervisor {
+  margin: 2em 0;
+}
+
+.ttl-comment-supervisor {
+  font-weight: bold;
+  color: #ffffff;
+  display: inline-block;
+  background: #2DD4BF;
+  padding: 3px 12px 4px 15px;
+  border-radius: 100px;
+  position: relative;
+  top: 0.9em;
+  margin-left: 2%;
+  font-size: smaller;
+}
+
+.outer-comment-supervisor {
+  background: #f0fdfa;
+  padding: 4%;
+}
+
+.inner1-comment-supervisor {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1em;
+}
+
+.comment-supervisor .faceicon {
+  background: #ffffff;
+  padding: 5px;
+  border-radius: 50%;
+  margin: 0 1em 0 0;
+}
+
+.comment-supervisor .faceicon img {
+  width: 90px;
+  height: auto;
+  margin: 0;
+  border-radius: 50%;
+}
+
+.name-supervisor {
+  font-weight: bold;
+  font-size: 140%;
+  position: relative;
+  top: 2px;
+}
+
+.name-supervisor-en {
+  font-weight: bold;
+  font-size: normal;
+  color: #2DD4BF;
+  position: relative;
+  top: -2px;
+}
+
+.inner2-comment-supervisor {
+  background: #ffffff;
+  padding: 4%;
+  border-radius: 10px;
+  font-size: 90%;
+}
+
+.inner2-comment-supervisor p:last-child {
+  margin-bottom: 0;
+}
+
+.inner2-comment-supervisor p:first-child {
+  margin: 0;
+}
+
+.inner2-comment-supervisor  h4 {
+  padding: 0 0 2px 6px;
+  border-left: solid 6px #2DD4BF;
+}
+
+.inner2-comment-supervisor  h4 {
+  margin-top: 0;
+}
+
+/*----- アコーディオン -----*/
+.accordion {
+  width: 100%;
+  margin: 1.5em 0;
+  border: 1px solid #e5e7eb;
+  border-radius: 10px;
+  overflow: hidden;
+  position: relative;
+}
+
+.accordion-content {
+  height: 200px;
+  overflow: hidden;
+  transition: height 0.3s ease;
+  background-color: #fff;
+  padding: 1em 1.5em;
+  box-sizing: border-box;
+  position: relative;
+}
+
+.accordion-content * {
+  margin: 0 auto;
+}
+
+.accordion-content *:last-child {
+  margin: 0 auto 16px auto;
+}
+
+.accordion-content::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background: linear-gradient(to top, white, rgba(255, 255, 255, 0));
+  pointer-events: none; /* もや部分がクリックできないようにする */
+  transition: opacity 0.3s ease;
+  opacity: 1;
+}
+
+.accordion-button::before {
+  content: "開く"; /* 初期状態では「開く」を表示 */
+}
+
+.accordion-button {
+  display: block;
+  width: 30%;
+  border-radius: 100px;
+  padding: 6px;
+  margin: 0 auto;
+  background-color: #60A5FA;
+  color: white;
+  text-align: center;
+  cursor: pointer;
+  box-sizing: border-box;
+  font-size: smaller;
+  font-weight: bold;
+  position: relative;
+  top: -18px;
+}
+
+.accordion-toggle {
+  display: none;
+}
+
+.accordion-toggle:checked ~ .accordion-content {
+  height: 100%; /* チェックが入ると高さが100%に */
+}
+
+.accordion-toggle:checked ~ .accordion-content::after {
+  opacity: 0; /* 開いた状態ではもやを非表示に */
+}
+
+.accordion-toggle:checked ~ .accordion-button::before {
+  content: "閉じる"; /* チェックが入ると「閉じる」を表示 */
+}
+
+/*----- ボーダー -----*/
+.border-lightblue {
+  opacity: 0.7;
+  background: linear-gradient(135deg, #67E8F955 25%, transparent 25%) -25px 0/ 50px 50px, linear-gradient(225deg, #67E8F9 25%, transparent 25%) -25px 0/ 50px 50px, linear-gradient(315deg, #67E8F955 25%, transparent 25%) 0px 0/ 50px 50px, linear-gradient(45deg, #67E8F9 25%, #ffffff00 25%) 0px 0/ 50px 50px;
+}
+
+.border-blue {
+  opacity: 0.7;
+  background: linear-gradient(135deg, #60A5FA55 25%, transparent 25%) -25px 0/ 50px 50px, linear-gradient(225deg, #60A5FA 25%, transparent 25%) -25px 0/ 50px 50px, linear-gradient(315deg, #60A5FA55 25%, transparent 25%) 0px 0/ 50px 50px, linear-gradient(45deg, #60A5FA 25%, #ffffff00 25%) 0px 0/ 50px 50px;
+}
+
+.border-green {
+  opacity: 0.7;
+  background: linear-gradient(135deg, #2DD4BF55 25%, transparent 25%) -25px 0/ 50px 50px, linear-gradient(225deg, #2DD4BF 25%, transparent 25%) -25px 0/ 50px 50px, linear-gradient(315deg, #2DD4BF55 25%, transparent 25%) 0px 0/ 50px 50px, linear-gradient(45deg, #2DD4BF 25%, #ffffff00 25%) 0px 0/ 50px 50px;
+}
